# dons_graficos

./: .gitignore  CHANGELOG.md  OFICIAL DESCUBRA SEUS DONS ESPIRITUAIS (respostas) - Respostas ao formulário 1.csv  OFICIAL DESCUBRA SEUS DONS ESPIRITUAIS (respostas).xlsx  README.md  README_SQL.md  TODO.md  dons.csv  dons.py  dons_completo.csv  main.py  package-lock.json  package.json  pyproject.toml  wrap.py
legacy/: .gitignore  OFICIAL DESCUBRA SEUS DONS ESPIRITUAIS (respostas) - Tabulados.csv  OFICIAL DESCUBRA SEUS DONS ESPIRITUAIS (respostas).xlsx  dons.csv  dons_completo.csv  main.py  prompt.txt  pyproject.toml
legacy/supabase/.temp/: linked-project.json
scripts/: backfill-ai.js  import_to_supabase.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/generate-ai/: index.ts
supabase/functions/notify-admin/: index.ts
supabase/functions/retry-ai-analysis/: index.ts
supabase/functions/send-email/: index.ts
supabase/functions/teste-generate-ai/: index.ts
supabase/migrations/: 001_initial.sql
