[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco André Mendes", email = "marcoandre@gmail.com"},
]
dependencies = [
    "matplotlib>=3.7.1",
    "pandas>=3.0.3",
    "seaborn>=0.12.2",
    "supabase>=2.30.1",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "python main.py"
check = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"

[tool.ruff]
line-length = 120
extend-exclude = ['migrations', '__init__.py', 'manage.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR6301"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[dependency-groups]
dev = [
  "pylint>=3.0.2",
  "ipython>=8.26.0",
  "ruff>=0.11.2",
]
